Bug 12735 - Retail: iPad: Number in the Bag icon is bottom aligned

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -211,11 +211,11 @@ footer {
 }
 #header .main ul.menu li.cart {
     position: absolute;
-    top: -15px;
+    top: -14px;
     right: 55px;
     width: 32px;
     height: 30px;
-    padding-top: 14px;
+    padding-top: 13px;
     text-align: center;
     text-shadow: none;
     font-weight: bold;
